# donitsi

./: Cargo.toml  dockerfile
core/src/: lib.rs
examples/: main.do  rotating_triangles.do  todo.do  triangles.do  ui.do
ffi/src/: lib.rs
shaders/: fragment_shader.wgsl
src/: args.rs  compiler.rs  component.rs  components.rs  donitsi.rs  main.rs  parser.rs  parser_tests.rs  pretty.rs  types.rs  ui.rs  ui_tests.rs  vm.rs  window.rs
src/commands/: ast.rs  mod.rs  run.rs
src/components/: game_world.rs  main.rs  mod.rs  triangle.rs  window.rs
