[package]
name = "donitsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
clap = { version = "4", features = ["derive"] } 
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"